--- a/docker/Dockerfile_dagster
+++ b/docker/Dockerfile_dagster
@@ -15,6 +15,6 @@ ENV DAGSTER_HOME=/opt/dagster/dagster_home/
 
 RUN mkdir -p $DAGSTER_HOME
 
-COPY dagster.yaml workspace_docker.yaml $DAGSTER_HOME
+COPY docker/dagster.yaml docker/workspace.yaml $DAGSTER_HOME
 
 WORKDIR $DAGSTER_HOME
