--- a/docker/Dockerfile_pipelines
+++ b/docker/Dockerfile_pipelines
@@ -17,7 +17,7 @@ ENV DAGSTER_HOME=/opt/dagster/dagster_home
 
 RUN mkdir -p $DAGSTER_HOME
 
-COPY dagster.yaml $DAGSTER_HOME
+COPY docker/dagster.yaml $DAGSTER_HOME
 
 # Add repository code
 
@@ -31,4 +31,4 @@ EXPOSE 4000
 
 # CMD allows this to be overridden from run launchers or executors that want
 # to run other commands against your repository
-CMD ["dagster", "api", "grpc", "-h", "0.0.0.0", "-p", "4000", "-f", "repositories.py"]
+CMD ["dagster", "api", "grpc", "-h", "0.0.0.0", "-p", "4000", "-m", "definitions.repositories"]
