- moved local workspace and example to local directory - switched to pyhton based build_and_upload_user_image.py script with parameters in file "versions"

--- a/Pipfile
+++ b/Pipfile
@@ -7,11 +7,14 @@ name = "pypi"
 dagster = "*"
 dagit = "*"
 requests = "*"
-pytest = "*"
 pandas = "*"
 dagster-pandas = "*"
 
+
 [dev-packages]
+python-dotenv = "*"
+docker = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.9"
