--- a/kubernetes/Dockerfile
+++ b/kubernetes/Dockerfile
@@ -8,15 +8,22 @@ RUN     apt-get update -yqq
 # Cron
 RUN     apt-get install -yqq cron
 
-# Dagster
+# Use Virtual Environment
+ENV VIRTUAL_ENV=/opt/venv
+RUN python3 -m venv $VIRTUAL_ENV
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+
+# Install dependencies that are not in Pipfile
 RUN     pip install \
         dagster==${DAGSTER_VERSION} \
         dagster-postgres==${DAGSTER_VERSION} \
-        dagster-aws==${DAGSTER_VERSION} \
-        dagster-k8s==${DAGSTER_VERSION} \
-        dagster-pandas==${DAGSTER_VERSION} \
-        requests \
-        pandas
+        dagster-k8s==${DAGSTER_VERSION}
+
+# Install dependencies that are in Pipfile
+RUN pip install pipenv
+COPY Pipfile* /tmp/
+RUN cd /tmp && pipenv lock --keep-outdated --requirements > requirements.txt
+RUN pip install -r /tmp/requirements.txt
 
 # Cleanup
 RUN  rm -rf /var \
