- add --lazy-load-user-code parameter to grpc server to transmit crash details to dagit

--- a/kubernetes/values.yaml
+++ b/kubernetes/values.yaml
@@ -185,6 +185,7 @@ userDeployments:
       dagsterApiGrpcArgs:
         - "-f"
         - "definitions/repositories.py"
+        - "--lazy-load-user-code"
       port: 3030
 
       # Additional environment variables to set.
