--- a/kubernetes/values.yaml
+++ b/kubernetes/values.yaml
@@ -21,8 +21,8 @@ dagit:
   replicaCount: 1
   # REQUIRED: Dagit image repository and tag to deploy
   image:
-    repository: "dagster/k8s-dagit-example"
-    tag: "0.10.1"
+    repository: "dagster/dagster-k8s"
+    tag: "0.10.5"
     pullPolicy: Always
 
   service:
@@ -169,7 +169,7 @@ userDeployments:
     - name: "k8s-exchangerates-example-user-code-1"
       image:
         repository: "airblaster/dagster_exchangerates"
-        tag: 0.10.1
+        tag: 0.10.5
         # Change with caution! If you're using a fixed tag for pipeline run images, changing the
         # image pull policy to anything other than "Always" will use a cached/stale image, which is
         # almost certainly not what you want.
@@ -262,8 +262,8 @@ userDeployments:
 ####################################################################################################
 pipelineRun:
   image:
-    repository: "dagster/k8s-example"
-    tag: "0.10.1"
+    repository: "dagster/user-code-example"
+    tag: "0.10.5"
     pullPolicy: Always
 
   # Additional environment variables to set.
@@ -275,8 +275,7 @@ pipelineRun:
   # env:
   #   ENV_ONE: one
   #   ENV_TWO: two
-  env:
-    YOUR_ENV_VAR: ""
+  env: {}
 
 ####################################################################################################
 # Scheduler: Configuration for the scheduler
@@ -296,8 +295,8 @@ scheduler:
       # (to call `dagster api launch_scheduled_execution`) and instance yaml
       # but does not need access to user code.
       image:
-        repository: "dagster/k8s-dagit"
-        tag: "0.10.1"
+        repository: "dagster/dagster-k8s"
+        tag: "0.10.5"
         pullPolicy: Always
 
       # K8s Namespace for K8s CronJob(s) and launched K8s Job(s).
@@ -377,8 +376,8 @@ runLauncher:
     celeryK8sRunLauncher:
       # The Celery workers can be deployed with a fixed image (no user code included)
       image:
-        repository: "dagster/k8s-celery-worker"
-        tag: "0.10.1"
+        repository: "dagster/dagster-celery-k8s"
+        tag: "0.10.5"
         pullPolicy: Always
 
       # Support overriding the name prefix of Celery worker pods
@@ -390,10 +389,12 @@ runLauncher:
       configSource: {}
 
       # Additional Celery worker queues can be configured here. When overriding, be sure to
-      # provision a "dagster" worker queue, as this is the default queue used by Dagster.
+      # provision a "dagster" worker queue, as this is the default queue used by Dagster. Labels field is optional. If specified,
+      # the labels are added to each Celery worker in that Celery queue
       workerQueues:
         - name: "dagster"
           replicaCount: 2
+          labels: {}
 
       # Additional environment variables to set on the celery/job containers
       # A Kubernetes ConfigMap will be created with these environment variables. See:
@@ -669,8 +670,8 @@ dagsterDaemon:
   enabled: true
 
   image:
-    repository: "dagster/k8s-dagit"
-    tag: "0.10.1"
+    repository: "dagster/dagster-k8s"
+    tag: "0.10.5"
     pullPolicy: Always
 
   queuedRunCoordinator:
@@ -718,7 +719,7 @@ dagsterDaemon:
     exec:
       command:
         - "dagster-daemon"
-        - "health-check"
+        - "liveness-check"
     # initialDelaySeconds: 60
     periodSeconds: 30
     failureThreshold: 3
@@ -732,7 +733,7 @@ dagsterDaemon:
     exec:
       command:
         - "dagster-daemon"
-        - "health-check"
+        - "liveness-check"
     periodSeconds: 10
     failureThreshold: 12
     timeoutSeconds: 3
