--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,10 @@ dagster = "==0.10.5"
 dagster-pandas = "==0.10.5"
 requests = "*"
 pandas = "*"
+jupyter = "*"
+plotly = "*"
+ipywidgets = "*"
+dagstermill = "*"
 
 [dev-packages]
 dagit = "==0.10.5"
